# lantern-grammar

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci-pipeline.yaml
docs/: index.md  introduction.md  lifecycle.md  upgrade-0.3-to-0.4.md
docs/gates/: GATES.md
model/: index.json  manifest.json
model/objects/Entity/: lg__artifacts__arch.json  lg__artifacts__ch.json  lg__artifacts__ci.json  lg__artifacts__db.json  lg__artifacts__dc.json  lg__artifacts__dip.json  lg__artifacts__initiative.json  lg__artifacts__issue.json  lg__artifacts__question.json  lg__artifacts__spec.json  lg__artifacts__td.json  lg__gates__gt_030.json  lg__gates__gt_035.json  lg__gates__gt_036.json  lg__gates__gt_045.json  lg__gates__gt_050.json  lg__gates__gt_060.json  lg__gates__gt_110.json  lg__gates__gt_115.json  lg__gates__gt_120.json  lg__gates__gt_130.json  lg__records__dec.json  lg__records__ev.json  lg__reltypes__decomposes_to.json  lg__reltypes__requires_evidence.json  lg__reltypes__requires_input.json  lg__reltypes__requires_status.json  lg__statuses__accepted.json  lg__statuses__addressed.json  lg__statuses__approved.json  lg__statuses__candidate.json  lg__statuses__concluded.json  lg__statuses__concluded_initiative.json  lg__statuses__deferred.json  lg__statuses__draft.json  lg__statuses__draft_initiative.json  lg__statuses__in_progress.json  lg__statuses__in_progress_initiative.json  lg__statuses__needs_info.json  lg__statuses__new.json  (+50 more)
model/objects/Relation/: lg__rel__gt_030.requires_evidence.dec.json  lg__rel__gt_030.requires_evidence.ev.json  lg__rel__gt_030.requires_input.dip.json  lg__rel__gt_030.requires_status.draft.json  lg__rel__gt_035.requires_evidence.dec.json  lg__rel__gt_035.requires_evidence.ev.json  lg__rel__gt_035.requires_input.dip.json  lg__rel__gt_035.requires_input.spec.json  lg__rel__gt_035.requires_status.approved.json  lg__rel__gt_035.requires_status.draft.json  lg__rel__gt_036.requires_evidence.dec.json  lg__rel__gt_036.requires_evidence.ev.json  lg__rel__gt_036.requires_input.arch.json  lg__rel__gt_036.requires_input.dip.json  lg__rel__gt_036.requires_status.approved.json  lg__rel__gt_036.requires_status.draft.json  lg__rel__gt_045.requires_evidence.dec.json  lg__rel__gt_045.requires_evidence.ev.json  lg__rel__gt_045.requires_input.arch.json  lg__rel__gt_045.requires_input.dip.json  lg__rel__gt_045.requires_input.spec.json  lg__rel__gt_045.requires_status.approved.json  lg__rel__gt_045.requires_status.draft.json  lg__rel__gt_050.requires_evidence.dec.json  lg__rel__gt_050.requires_evidence.ev.json  lg__rel__gt_050.requires_input.arch.json  lg__rel__gt_050.requires_input.dip.json  lg__rel__gt_050.requires_input.spec.json  lg__rel__gt_050.requires_status.approved.json  lg__rel__gt_050.requires_status.draft.json  lg__rel__gt_060.requires_evidence.dec.json  lg__rel__gt_060.requires_evidence.ev.json  lg__rel__gt_060.requires_input.arch.json  lg__rel__gt_060.requires_input.dip.json  lg__rel__gt_060.requires_input.spec.json  (+107 more)
scripts/: __init__.py  add_license.py  check_license_headers.py  check_version_alignment.py  generate_license_report.py  generate_sbom.py  smoke_test_installed_package.py
src/lantern_grammar/: __init__.py  _exceptions.py  _grammar.py  _lifecycle.py
src/lantern_grammar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_grammar.py  test_lifecycle.py
(+59 files in other folders)
