[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lantern-grammar"
version = "0.2.1"
description = "Authoritative semantic model for Lantern governed workflow"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lantern_grammar" = ["_model/**/*", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
