[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lantern-grammar"
version = "0.3.0"
description = "Authoritative semantic model for Lantern governed workflow"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "version.txt"}

[tool.setuptools.package-data]
"lantern_grammar" = ["_model/**/*", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint]
max-line-length = 120
fail-under = 7.5

[tool.black]
line-length = 120
target-version = ["py311", "py312"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
extend-ignore = ["E501"]

[tool.mypy]
exclude = ["tests/", "build/", "dist/"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/lantern_grammar"]

