[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lantern-grammar"
version = "0.4.0"
description = "Authoritative semantic model for Lantern governed workflow"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "jsonschema>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "black==24.1.1",
    "coverage==7.6.10",
    "mypy==1.14.1",
    "pylint==3.3.4",
    "pytest==8.3.4",
    "ruff==0.1.13",
    "tomli==2.0.1",
    "types-PyYAML",
]
release = [
    "build==1.2.2.post1",
    "cyclonedx-bom==4.1.1",
    "twine==6.0.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lantern_grammar" = ["py.typed", "_schemas/*.schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint]
max-line-length = 120
fail-under = 7.5

[tool.black]
line-length = 120
target-version = ["py311", "py312"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
extend-ignore = ["E501"]

[tool.mypy]
exclude = ["tests/", "build/", "dist/"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/lantern_grammar"]

